--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-on-netlify": "^2.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "socket.io-client": "^3.0.1",
     "typescript": "^4.0.5"
   }
 }
