--- a/package.json
+++ b/package.json
@@ -15,9 +15,19 @@
     "@types/react": "^16.9.56",
     "next": "10.0.1",
     "next-on-netlify": "^2.6.0",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-socket.io": "^1.4.0",
     "socket.io-client": "^3.0.1",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.11",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
   }
 }
