--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "10.0.1",
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
+    "notistack": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
