--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^1.0.1",
     "react": "17.0.1",
+    "react-countdown": "^2.3.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
