--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -13,6 +14,7 @@
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "next": "10.0.1",
+    "next-on-netlify": "^2.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typescript": "^4.0.5"
