--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-firebase/database": "^0.3.11",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "clsx": "^1.1.1",
+    "firebase": "^8.0.2",
     "next": "10.0.1",
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
