--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-socket.io": "^1.4.0",
     "socket.io-client": "^3.0.1",
     "typesafe-actions": "^5.1.0",
