--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-firebase/database": "^0.3.11",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "firebase": "^8.0.2",
+    "lodash.castarray": "^4.4.0",
     "next": "10.0.1",
     "next-on-netlify": "^2.6.0",
     "next-redux-wrapper": "^6.0.2",
