--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "name-game-app",
+  "name": "guesser-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "next": "10.0.1",
     "next-on-netlify": "^2.6.0",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-socket.io": "^1.4.0",
     "socket.io-client": "^3.0.1",
     "typesafe-actions": "^5.1.0",
